color change fix on hover; adjusted white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -14,30 +14,30 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
-  line-height: 1;
+   line-height: 1;
 }
 ol, ul {
-  list-style: none;
+   list-style: none;
 }
 blockquote, q {
-  quotes: none;
+   quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
-  content: none;
+   content: '';
+   content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+   border-collapse: collapse;
+   border-spacing: 0;
 }
 
 body {
-  color: #333;
-  font-family:'Merriweather', serif;
-  font-family: 'Raleway', sans-serif;
-  margin: 0 auto;
-  width: 300px;
+   color: #333;
+   font-family:'Merriweather', serif;
+   font-family: 'Raleway', sans-serif;
+   margin: 0 auto;
+   width: 300px;
 }
 
 nav {
@@ -137,11 +137,11 @@ nav ul > li {
    background-color: #8caba8;
 }
 nav ul > li ul {
-  visibility: hidden;
-  position: absolute;
-  top: 40px;
-  left: 0;
-  transition: 3s;
+   visibility: hidden;
+   position: absolute;
+   top: 40px;
+   left: 0;
+   transition: 3s;
 }
 nav ul > li:hover ul {
   visibility: visible;
@@ -155,17 +155,16 @@ nav .dropdown:after {
     content: ' ▶';
 }
 nav .dropdown:hover:after{
-   content:'\25bc'
+   content:'\25bc';
 }
-
 nav li ul {
-    float: left;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 35px;
-    visibility: hidden;
-    z-index: 1;
+   float: left;
+   left: 0;
+   opacity: 0;
+   position: absolute;
+   top: 35px;
+   visibility: hidden;
+   z-index: 1;
     -webkit-transition: all .25s ease;
        -moz-transition: all .25s ease;
         -ms-transition: all .25s ease;
@@ -173,13 +172,19 @@ nav li ul {
             transition: all .25s ease;
 }
 nav li:hover ul {
-    opacity: 1;
-    top: 0;
-    visibility: visible;
+   opacity: 1;
+   top: 0;
+   visibility: visible;
 }
+
 nav li ul li {
-    float: none;
-    width: 100%;
+   float: none;
+   width: 100%;
+}
+
+nav li ul li:hover {
+   background-color: #333;
+   transition: 2s;
 }
 
 /* Clearfix */
